--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -2,12 +2,24 @@
 	margin-left: 50px;
 	height: 1.2em;
 }
-
-.messageBox {
-	background-color: #75767d;
+.category, .channel, .freeChannel {
+	cursor: pointer;
 }
 
 
+.messageBox {
+	background-color: #75767d;
+	overflow: auto;
+	height: 100%;
+}
+
+
+.channellist {
+	width: 100%;
+	overflow: auto;
+	background-color: gray;
+	margin-left: 5px;
+}
 .formBox {
 	width: 100%;
 	background-color: #75767d;
@@ -41,9 +53,10 @@
 	top: 0px;
 }
 .main {
-	position: absolute;
+	position: relative;
 	height: 100vh;
 	width: 100%;
+	background-color: #72767d;
 }
 .icon {
 	display: block;
@@ -60,17 +73,21 @@
 }
 .sidebar {
 	display: flex;
-height: 100vh;
-position: fixed;
-z-index: 1;
-top: 0;
-left: 0;
-background-color: rgb(112, 112, 112);
-overflow-x: hidden;
-
-transition: 0.5s;
+	height: 100vh;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-color: grey;
+	overflow-x: hidden;
+	transition: 0.5s;
 }
-
+.serverlist {
+	min-width: 60px;
+	max-width: 60px;
+	background-color: black;
+	overflow: auto
+}
 @media screen and (min-width: 675px) {
     .sidebar {
         width: 300px;
@@ -78,27 +95,18 @@ transition: 0.5s;
     }
     .btn {
 			display: none;
-		}
-		.main {
-			margin-left: 300px;
-			padding-top: 0px;
-		}
+	}
+	.main {
+		margin-left: 300px;
+		padding-top: 0px;
+	}
 	.bar1, .bar2, .bar3 {
 		display: none;
 	}
-	
 }
 
- .serverlist {
-	 width: 60px;
-	 background-color: black;
-	 overflow: auto
- }
- .channelList {
-	 width: 100%;
-	 overflow: auto;
-	 background-color: gray;
- }
+
+
  
 .btn {
 	z-index: 2;
@@ -107,11 +115,10 @@ transition: 0.5s;
 }
 .bar1, .bar2, .bar3 {
 	width: 35px;
-  height: 5px;
-  background-color: #333;
-  margin: 6px auto;
-  transition: 0.4s;
-	
+  	height: 5px;
+  	background-color: #333;
+  	margin: 6px auto;
+  	transition: 0.4s;
 }
 .change .bar1 {
 	transform: rotate(-45deg)translate(-9px, 6px)
@@ -127,24 +134,21 @@ transition: 0.5s;
     .sidebar {
         width: 0;
     }
-		.open .sidebar {
-			width: 100%
-		}
-		.open .btn {
-			
-			right: 10%;
-			
-		}
-		.btn {
-			right: 80%;
-			padding-top: 5px;
-			display: inline-block block;
-			border-radius: 40%;
-			background-color: black;
-			height: 45px;
-			width: 50px;
-			position: fixed;
-			transition: right 2s;
-		}
-	
+	.open .sidebar {
+		width: 100%
+	}
+	.open .btn {		
+		right: 10%;	
+	}
+	.btn {
+		right: 80%;
+		padding-top: 5px;	
+		display: inline-block block;
+		border-radius: 40%;
+		background-color: black;
+		height: 45px;
+		width: 50px;
+		position: fixed;
+		transition: right 2s;
+	}	
 }
